--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investment Strategy Comparison</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@2.0.0"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <style>
         body {
@@ -200,7 +201,9 @@
 
     <script>
         let stockData = [];
+        let ndxStockData = []; // Corrected array name
         let totalPortfolioChart;  // Chart.js instance for the total portfolio
+        let datasetsLoaded = 0; // Counter to track loaded datasets
 
         // Select elements
         const totalInvestmentSlider = document.getElementById('totalInvestment');
@@ -222,64 +225,28 @@
         const stocksValueDisplay = document.getElementById('stocksValue');
         const availableMoneyDisplay = document.getElementById('availableMoneyDisplay');
 
-        // Automatically load the CSV file when the page loads
+        // Automatically load the CSV files when the page loads
         window.onload = function() {
-            console.log("Fetching CSV file...");
+            console.log("Fetching CSV files...");
+
+            // Fetch QLD data
             fetch('https://raw.githubusercontent.com/awakzdev/finance/main/qld_stock_data.csv')
-            .then(response => {
-                console.log("CSV file fetched successfully.");
-                return response.text();
-            })
+            .then(response => response.text())
             .then(csvText => {
-                console.log("Parsing CSV data...");
-                Papa.parse(csvText, {
-                    header: true,
-                    dynamicTyping: true,
-                    complete: function(results) {
-                        console.log("CSV data parsed successfully.");
-                        
-                        // Check if the 'Date' or 'date' key exists in the parsed data
-                        const dateKey = results.data.length > 0 && ('Date' in results.data[0]) ? 'Date' : 'date';
-                        const closePriceKey = 'Close'; // Use 'Close' field directly
-                        const openPriceKey = 'Open'; // Assuming Open price is available
-
-                        if (!dateKey || !closePriceKey || !openPriceKey) {
-                            console.error("CSV data is missing required columns ('Date', 'Adj Close', or 'Open').");
-                            finalTotalValueDisplay.textContent = 'Invalid data: Missing columns';
-                            return;
-                        }
-
-                        // Filter out invalid rows where price is NaN or undefined
-                        stockData = results.data
-                            .filter(row => row[closePriceKey] !== undefined && !isNaN(row[closePriceKey]))
-                            .map(row => ({
-                                date: row[dateKey],  // Use the correct key ('Date' or 'date')
-                                price: row[closePriceKey],
-                                openPrice: row[openPriceKey]  // Include Open price
-                            }));
-
-                        console.log("Filtered and mapped stock data:", stockData);
-                        console.log("Stock data length:", stockData.length);
-
-                        if (stockData.length > 0) {
-                            console.log("Stock data is valid. Setting up the chart...");
-                            setupChart(); // Initialize the chart
-                            console.log("Chart setup complete. Populating date dropdown...");
-                            populateDateDropdown(); // Populate the date dropdown
-                            console.log("Date dropdown populated. Calculating results...");
-                            calculateResults(); // Calculate results after setting up everything
-                        } else {
-                            console.error("Invalid data: No valid stock data found.");
-                            finalTotalValueDisplay.textContent = 'Invalid data';
-                        }
-                    },
-                    error: function(error) {
-                        console.error("Error parsing CSV data:", error);
-                    }
-                });
+                parseCSVData(csvText, 'QLD');
             })
             .catch(error => {
-                console.error("Error fetching CSV file:", error);
+                console.error("Error fetching QLD CSV file:", error);
+            });
+
+            // Fetch NDX data
+            fetch('https://raw.githubusercontent.com/awakzdev/finance/main/ndx_stock_data.csv')
+            .then(response => response.text())
+            .then(csvText => {
+                parseCSVData(csvText, 'NDX');
+            })
+            .catch(error => {
+                console.error("Error fetching NDX CSV file:", error);
             });
 
             // Add event listeners to sliders here
@@ -319,9 +286,93 @@
             });
         };
 
+        function parseCSVData(csvText, type) {
+            Papa.parse(csvText, {
+                header: true,
+                dynamicTyping: true,
+                complete: function(results) {
+                    console.log(`CSV data parsed successfully for ${type}.`);
+
+                    const dateKey = results.data.length > 0 && ('Date' in results.data[0]) ? 'Date' : 'date';
+                    const closePriceKey = 'Close';
+                    const openPriceKey = 'Open';
+
+                    if (!dateKey || !closePriceKey || !openPriceKey) {
+                        console.error(`CSV data for ${type} is missing required columns ('Date', 'Close', or 'Open').`);
+                        finalTotalValueDisplay.textContent = 'Invalid data: Missing columns';
+                        return;
+                    }
+
+                    const parsedData = results.data
+                        .filter(row => {
+                            const dateStr = row[dateKey];
+                            const price = row[closePriceKey];
+                            const openPrice = row[openPriceKey];
+
+                            if (!dateStr || isNaN(price) || isNaN(openPrice)) {
+                                console.warn(`Skipping invalid row in ${type} data:`, row);
+                                return false;
+                            }
+                            return true;
+                        })
+                        .map(row => {
+                            const dateStr = row[dateKey].trim();
+                            const [dayStr, monthStr, yearStr] = dateStr.split('/');
+                            const day = parseInt(dayStr);
+                            const month = parseInt(monthStr);
+                            const year = parseInt(yearStr);
+
+                            return {
+                                date: dateStr,
+                                price: row[closePriceKey],
+                                openPrice: row[openPriceKey],
+                                dateObj: new Date(year, month - 1, day) // Store date object for easier comparison
+                            };
+                        });
+
+                    console.log(`${type} parsed data dates:`, parsedData.map(d => d.date));
+
+                    if (parsedData.length > 0) {
+                        if (type === 'QLD') {
+                            stockData = parsedData;
+                            console.log("QLD stock data loaded. Total entries:", stockData.length);
+                        } else if (type === 'NDX') {
+                            ndxStockData = parsedData;
+                            console.log("NDX stock data loaded. Total entries:", ndxStockData.length);
+                        }
+
+                        datasetsLoaded++;
+                        if (datasetsLoaded === 2) {
+                            // Both datasets are loaded, proceed to setup
+                            setupChart();
+                            populateDateDropdown();
+                            calculateResults();
+                        }
+                    } else {
+                        console.error(`Invalid data: No valid stock data found for ${type}.`);
+                        finalTotalValueDisplay.textContent = 'Invalid data';
+                    }
+                },
+                error: function(error) {
+                    console.error(`Error parsing CSV data for ${type}:`, error);
+                }
+            });
+        }
+
+
         function populateDateDropdown() {
-            // Get unique dates from stockData
-            const uniqueDates = [...new Set(stockData.map(data => data.date))];
+            // Combine dates from both datasets
+            const combinedDates = [...stockData, ...ndxStockData].map(data => data.date);
+            const uniqueDates = [...new Set(combinedDates)];
+
+            // Sort the dates in ascending order
+            uniqueDates.sort((a, b) => {
+                const [aDay, aMonth, aYear] = a.split('/');
+                const [bDay, bMonth, bYear] = b.split('/');
+                const aDate = new Date(parseInt(aYear), parseInt(aMonth) - 1, parseInt(aDay));
+                const bDate = new Date(parseInt(bYear), parseInt(bMonth) - 1, parseInt(bDay));
+                return aDate - bDate;
+            });
 
             // Clear existing options in the dropdowns
             dateRangeDropdown.innerHTML = '';
@@ -354,26 +405,35 @@
             const selectedClosingDate = document.getElementById('closingDate').value;
 
             // Convert the selected dates to Date objects for comparison
-            const [startDay, startMonth, startYear] = selectedStartDate.split('/');
-            const startDateObj = new Date(startYear, startMonth - 1, startDay);
-            const [endDay, endMonth, endYear] = selectedClosingDate.split('/');
-            const endDateObj = new Date(endYear, endMonth - 1, endDay);
+            const startDateObj = parseDate(selectedStartDate);
+            const endDateObj = parseDate(selectedClosingDate);
+
+            console.log("Selected start date:", startDateObj);
+            console.log("Selected end date:", endDateObj);
 
             // Filter stock data to include only dates within the selected range
             const filteredStockData = stockData.filter(data => {
-                const [day, month, year] = data.date.split('/');
-                const dataDate = new Date(year, month - 1, day);
-                return dataDate >= startDateObj && dataDate <= endDateObj;
+                const isInDateRange = data.dateObj >= startDateObj && data.dateObj <= endDateObj;
+                return isInDateRange;
             });
 
-            if (!filteredStockData.length) {
+            const filteredNDXStockData = ndxStockData.filter(data => {
+                const isInDateRange = data.dateObj >= startDateObj && data.dateObj <= endDateObj;
+                return isInDateRange;
+            });
+
+            console.log("Filtered QLD data dates:", filteredStockData.map(d => d.date));
+            console.log("Filtered NDX data dates:", filteredNDXStockData.map(d => d.date));
+
+            if (!filteredStockData.length || !filteredNDXStockData.length) {
                 console.error("No stock data available for the selected date range.");
                 finalTotalValueDisplay.textContent = 'No data';
-                updateChart([], [], []);  // Clear the chart if no data
+                updateChart([], [], [], []);  // Clear the chart if no data
                 return;
             }
 
-            console.log("Filtered stock data for calculations:", filteredStockData);
+            // console.log("Filtered stock data for calculations:", filteredStockData);
+            // console.log("Filtered NDX stock data for calculations:", filteredNDXStockData);
 
             // Initialize values for the calculation
             let totalPortfolioValue = parseInt(totalInvestmentSlider.value);
@@ -406,14 +466,10 @@
                 let sharesBought = 0;
                 let sharesSold = 0;
 
-                // Debugging logs
-                console.log(`Date: ${data.date}, Price: ${price}, Current Peak: ${currentPeak}`);
-
                 // Update the highest peak using the closing price for the first buy only
                 if (!bought && price > highestPeak) {
                     highestPeak = price;
                     currentPeak = price; // Set current peak as the new highest
-                    console.log(`New Highest Peak: ${highestPeak}`);
                 }
 
                 // Calculate the percentage drop from the current peak
@@ -423,7 +479,6 @@
                 if (index !== 0) { // Skip buying on the first day
                     // Buy logic
                     if (!bought) { // Initial buy
-                        // Buy if the price has dropped 5% from the highest peak
                         if (price <= highestPeak * (1 - buyThreshold)) {
                             // Perform the buy
                             let buyAmount = cash * buyAmountPercent;
@@ -449,9 +504,8 @@
                             currentPeak = price;
                         }
 
-                        // Buy if the price drops 5% from the current peak
-                        if (dropFromCurrentPeak >= (buyThreshold * 100)) { // Adjust threshold check
-                            // Perform the buy
+                        // Buy if the price drops by the buy threshold
+                        if (dropFromCurrentPeak >= (buyThreshold * 100)) {
                             let buyAmount = cash * buyAmountPercent;
                             let sharesToBuy = Math.floor(buyAmount / price);
 
@@ -468,18 +522,17 @@
                         }
                     }
 
-                    // Sell logic: check each batch of shares for sell condition (10% increase)
+                    // Sell logic: check each batch of shares for sell condition
                     activeInvestments = activeInvestments.map(investment => {
-                        // Check if the price has increased by 10% from the batch's buy price
                         if (price >= investment.buyPrice * (1 + sellThreshold)) {
-                            // Sell only the shares from this specific batch
+                            // Sell the shares from this batch
                             let saleProceeds = investment.shares * price;
                             totalProfit += (saleProceeds - (investment.shares * investment.buyPrice));
                             cash += saleProceeds;
-                            sharesSold = investment.shares; // Track the shares sold in this transaction
+                            sharesSold = investment.shares;
                             action = 'Sell';
-                            
-                            // Mark these shares as sold by setting the shares to 0 for this batch
+
+                            // Mark these shares as sold
                             return { ...investment, shares: 0 };
                         }
                         return investment;
@@ -519,7 +572,6 @@
                 });
             });
 
-
             console.log("Calculation complete. Final portfolio value:", totalPortfolioValues[totalPortfolioValues.length - 1]);
 
             const finalPortfolioValue = totalPortfolioValues[totalPortfolioValues.length - 1];
@@ -529,19 +581,40 @@
             stocksValueDisplay.textContent = `($${(activeInvestments.reduce((sum, inv) => sum + inv.shares * filteredStockData[filteredStockData.length - 1].price, 0)).toFixed(2)})`;
             availableMoneyDisplay.textContent = cash.toFixed(2);
 
-            updateChart(filteredStockData, totalPortfolioValues, activeProfits);
+            // Calculate NDX passive investment
+            let ndxInitialInvestment = 100000; // Hardcoded value
+            let ndxPassiveShares = ndxInitialInvestment / filteredNDXStockData[0].openPrice;
+            let ndxPortfolioValues = filteredNDXStockData.map(data => ndxPassiveShares * data.price);
+
+            updateChart(filteredStockData, totalPortfolioValues, activeProfits, filteredNDXStockData, ndxPortfolioValues);
             window.transactionLog = transactionLog;
 
             // Log final portfolio values
-            console.log("Final portfolio values:", totalPortfolioValues);
+            // console.log("Final portfolio values:", totalPortfolioValues);
         }
 
+        function parseDate(dateStr) {
+            const [dayStr, monthStr, yearStr] = dateStr.trim().split('/');
+            const day = parseInt(dayStr);
+            const month = parseInt(monthStr);
+            const year = parseInt(yearStr);
+
+            if (isNaN(day) || isNaN(month) || isNaN(year)) {
+                console.error(`Invalid date format: ${dateStr}`);
+                return null;
+            }
+
+            return new Date(year, month - 1, day);
+        }
 
         // Ensure the chart is updated based on the filtered data
-        function updateChart(filteredStockData, totalPortfolioValues, activeProfits) {
+        function updateChart(filteredStockData, totalPortfolioValues, activeProfits, filteredNDXStockData, ndxPortfolioValues) {
             totalPortfolioChart.data.labels = filteredStockData.map(data => data.date);
             totalPortfolioChart.data.datasets[0].data = totalPortfolioValues;
             totalPortfolioChart.data.datasets[1].data = activeProfits;
+
+            // Update NDX dataset
+            totalPortfolioChart.data.datasets[2].data = ndxPortfolioValues;
             totalPortfolioChart.update();
         }
 
@@ -566,6 +639,14 @@
                             data: [],  // Empty initially, will be populated
                             backgroundColor: 'rgba(255, 99, 132, 0.2)',
                             borderColor: 'rgba(255, 99, 132, 1)',
+                            borderWidth: 1,
+                            fill: true
+                        },
+                        {
+                            label: 'NDX Passive Investment',
+                            data: [],  // Empty initially, will be populated
+                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                            borderColor: 'rgba(54, 162, 235, 1)',
                             borderWidth: 1,
                             fill: true
                         }
@@ -625,9 +706,6 @@
             a.setAttribute('download', 'investment_strategy_log.csv');
             a.click();
         }
-
-
-
     </script>
 </body>
 </html>
